--- a/2018/2018-07/2018-07-25/source/300x250.css
+++ b/2018/2018-07/2018-07-25/source/300x250.css
@@ -711,13 +711,9 @@
     visibility: visible;
     -webkit-transform: translate(0px, 0px);
   }
-  50% {
-    visibility: visible;
-    -webkit-transform: translate(40px, -15px);
-  }
   100% { 
     visibility: visible;
-    -webkit-transform: translate(80px, 0px);
+    -webkit-transform: translate(204px, 0px);
   }
 }
 @-moz-keyframes dragonFly {
@@ -725,13 +721,9 @@
     visibility: visible;
     -moz-transform: translate(0px, 0px);
   }
-  50% {
-    visibility: visible;
-    -moz-transform: translate(40px, -15px);
-  }
   100% { 
     visibility: visible;
-    -moz-transform: translate(80px, 0px);
+    -moz-transform: translate(204px, 0px);
   }
 }
 @keyframes dragonFly {
@@ -739,13 +731,72 @@
     visibility: visible;
     transform: translate(0px, 0px);
   }
-  50% {
+  100% { 
     visibility: visible;
-    transform: translate(40px, -15px);
+    transform: translate(204px, 0px);
+  }
+}
+/*-- dragon up --*/
+@-webkit-keyframes dragonUp {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0px, 0px);
   }
   100% { 
     visibility: visible;
-    transform: translate(80px, 0px);
+    -webkit-transform: translate(0px, -15px);
+  }
+}
+@-moz-keyframes dragonUp {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0px, 0px);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0px, -15px);
+  }
+}
+@keyframes dragonUp {
+  0%   {
+    visibility: visible;
+    transform: translate(0px, 0px);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0px, -15px);
+  }
+}
+
+/*-- dragon down --*/
+@-webkit-keyframes dragonDown {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0px, 0px);
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0px, 15px);
+  }
+}
+@-moz-keyframes dragonDown {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0px, 0px);
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0px, 15px);
+  }
+}
+@keyframes dragonDown {
+  0%   {
+    visibility: visible;
+    transform: translate(0px, 0px);
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0px, 15px);
   }
 }
 /*-------------------------------------------*/
@@ -837,16 +888,26 @@
   -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
   animation: fadeIn 0.5s ease-in-out 1s forwards;
 }
+.dragon-up {
+  -webkit-animation: dragonUp 2s ease-in-out 2s forwards;
+  -moz-animation: dragonUp 2s ease-in-out 2s forwards;
+  animation: dragonUp 2s ease-in-out 2s forwards;
+}
+.dragon-down {
+  -webkit-animation: dragonDown 2s ease-in-out 4s forwards;
+  -moz-animation: dragonDown 2s ease-in-out 4s forwards;
+  animation: dragonDown 2s ease-in-out 4s forwards;
+}
 .dragon {
   background: url('./images/300x250_dragon.png');
   width: 115px;
   height: 67px;
   top: 96px;
-  left: 10px;
+  right: 300px;
 
-  -webkit-animation: dragonFly 5s ease-in-out 2s forwards;
-  -moz-animation: dragonFly 5s ease-in-out 2s forwards;
-  animation: dragonFly 5s ease-in-out 2s forwards;
+  -webkit-animation: dragonFly 4s ease-in-out 2s forwards;
+  -moz-animation: dragonFly 4s ease-in-out 2s forwards;
+  animation: dragonFly 4s ease-in-out 2s forwards;
 }
 .text1-container {
   -webkit-animation: fadeOut 0.5s ease-in-out 2.5s forwards;
