--- a/2018/2018-08/2018-08-09/source/728x90.css
+++ b/2018/2018-08/2018-08-09/source/728x90.css
@@ -843,8 +843,8 @@
   -moz-animation: fadeIn 0.75s ease-in-out 1s forwards;
   animation: fadeIn 0.75s ease-in-out 1s forwards;
 }
-.frame1_icon {
-  background: url('./images/728x90_frame1_icon.png');
+.frame1_icon1 {
+  background: url('./images/728x90_frame1_icon1.png');
   -webkit-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
   animation: fadeIn 0.75s ease-in-out 1.5s forwards;
@@ -861,34 +861,89 @@
   -moz-animation: fadeInUp 0.75s ease-in-out 2.25s forwards;
   animation: fadeInUp 0.75s ease-in-out 2.25s forwards;
 }
+.frame1_icon1_container {
+  -webkit-animation: fadeOut 0.5s ease-in-out 3.5s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 3.5s forwards;
+  animation: fadeOut 0.5s ease-in-out 3.5s forwards;
+}
+.frame1_icon2 {
+  background: url('./images/728x90_frame1_icon2.png');
+  -webkit-animation: fadeIn 0.5s ease-in-out 3.75s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 3.75s forwards;
+  animation: fadeIn 0.5s ease-in-out 3.75s forwards;
+}
+.frame1_icon2_container {
+  -webkit-animation: fadeOut 0.5s ease-in-out 5.25s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 5.25s forwards;
+  animation: fadeOut 0.5s ease-in-out 5.25s forwards;
+}
+.frame1_icon3 {
+  background: url('./images/728x90_frame1_icon3.png');
+  -webkit-animation: fadeIn 0.5s ease-in-out 5.5s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 5.5s forwards;
+  animation: fadeIn 0.5s ease-in-out 5.5s forwards;
+}
+.frame1_icon3_container {
+  -webkit-animation: fadeOut 0.5s ease-in-out 7s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 7s forwards;
+  animation: fadeOut 0.5s ease-in-out 7s forwards;
+}
+.frame1_icon4 {
+  background: url('./images/728x90_frame1_icon4.png');
+  -webkit-animation: fadeIn 0.5s ease-in-out 7.25s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 7.25s forwards;
+  animation: fadeIn 0.5s ease-in-out 7.25s forwards;
+}
+.frame1_icon4_container {
+  -webkit-animation: fadeOut 0.5s ease-in-out 8.75s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 8.75s forwards;
+  animation: fadeOut 0.5s ease-in-out 8.75s forwards;
+}
+.frame1_icon5 {
+  background: url('./images/728x90_frame1_icon5.png');
+  -webkit-animation: fadeIn 0.5s ease-in-out 9s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 9s forwards;
+  animation: fadeIn 0.5s ease-in-out 9s forwards;
+}
+.frame1_icon5_container {
+  -webkit-animation: fadeOut 0.5s ease-in-out 10.5s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 10.5s forwards;
+  animation: fadeOut 0.5s ease-in-out 10.5s forwards;
+}
+.frame1_icon6 {
+  background: url('./images/728x90_frame1_icon6.png');
+  -webkit-animation: fadeIn 0.5s ease-in-out 10.75s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 10.75s forwards;
+  animation: fadeIn 0.5s ease-in-out 10.75s forwards;
+}
 .frame1 {
-  -webkit-animation: fadeOut 0.5s ease-in-out 4.5s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 4.5s forwards;
-  animation: fadeOut 0.5s ease-in-out 4.5s forwards;
+  -webkit-animation: fadeOut 0.5s ease-in-out 12.5s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 12.5s forwards;
+  animation: fadeOut 0.5s ease-in-out 12.5s forwards;
 }
 
 
 .frame2_bg {
   background: url('./images/728x90_frame2_bg.png');
-  -webkit-animation: fadeIn 0.75s ease-in-out 4.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 4.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 4.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 12.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 12.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 12.75s forwards;
 }
 .frame2_logo {
   background: url('./images/728x90_frame2_logo.png');
-  -webkit-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 13.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 13.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 13.25s forwards;
 }
 .frame2_text {
   background: url('./images/728x90_frame2_text.png');
-  -webkit-animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 5.75s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 13.75s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 13.75s forwards;
+  animation: fadeInDown 0.75s ease-in-out 13.75s forwards;
 }
 .frame2_cta {
   background: url('./images/728x90_frame2_cta.png');
-  -webkit-animation: fadeInUp 0.75s ease-in-out 6.5s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 6.5s forwards;
-  animation: fadeInUp 0.75s ease-in-out 6.5s forwards;
+  -webkit-animation: fadeInUp 0.75s ease-in-out 14.5s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 14.5s forwards;
+  animation: fadeInUp 0.75s ease-in-out 14.5s forwards;
 }
