update 300x250 mobile format

--- a/2018/2018-08/2018-08-19/source/300x250_mobile.css
+++ b/2018/2018-08/2018-08-19/source/300x250_mobile.css
@@ -863,10 +863,10 @@
 }
 .cta {
   background: url('./images/300x250_mobile_cta.png');
-  width: 106px;
-  height: 21px;
-  top: 202px;
-  left: 176px;
+  width: 115px;
+  height: 8px;
+  right: 12px;
+  bottom: 32px;
   -webkit-animation: fadeIn 0.75s ease-in-out 3s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 3s forwards;
   animation: fadeIn 0.75s ease-in-out 3s forwards;
