--- a/2018/2018-08/2018-08-27/source/retarget/970x250.css
+++ b/2018/2018-08/2018-08-27/source/retarget/970x250.css
@@ -976,6 +976,14 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
+.logo {
+  background: url('./images/970x250_logo.png');
+  width: 202px;
+  height: 250px;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
 .robot-without-eyes {
   background: url('./images/970x250_robot_without_eyes.png');
   width: 228px;
