--- a/2018/2018-08/2018-08-24/source/steve/970x250.css
+++ b/2018/2018-08/2018-08-24/source/steve/970x250.css
@@ -792,4 +792,23 @@
   -moz-animation: fadeIn 0.02s ease-in-out 9.75s forwards;
   animation: fadeIn 0.02s ease-in-out 9.75s forwards;
 }
-
+.image1-7-container {
+  -webkit-animation: fadeOut 0.02s ease-in-out 10.25s forwards;
+  -moz-animation: fadeOut 0.02s ease-in-out 10.25s forwards;
+  animation: fadeOut 0.02s ease-in-out 10.25s forwards;
+}
+.image2-7 {
+  -webkit-animation: fadeIn 0.02s ease-in-out 10.25s forwards;
+  -moz-animation: fadeIn 0.02s ease-in-out 10.25s forwards;
+  animation: fadeIn 0.02s ease-in-out 10.25s forwards;
+}
+.image2-7-container {
+  -webkit-animation: fadeOut 0.02s ease-in-out 10.75s forwards;
+  -moz-animation: fadeOut 0.02s ease-in-out 10.75s forwards;
+  animation: fadeOut 0.02s ease-in-out 10.75s forwards;
+}
+.image3-7 {
+  -webkit-animation: fadeIn 0.02s ease-in-out 10.75s forwards;
+  -moz-animation: fadeIn 0.02s ease-in-out 10.75s forwards;
+  animation: fadeIn 0.02s ease-in-out 10.75s forwards;  
+}
